# nick-derobertis-site

./: .buildinfo  .cruft.json  .dockerignore  .env.template.sh  .envrc  .flake8  .gitignore  .releaserc.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  Dockerfile  Pipfile  README.md  REPO_PLAN.md  biome.json  build-docker.sh  build.sh  ci-tools.json  conf.py  entrypoint.sh  eslint.config.mjs  flexlate.json  genindex.html  index.html  justfile  llmlint.yml  main.py  mypy.ini  nx.json  objects.inv  oneharness.toml  package.json  performance.config.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  py-modindex.html  pyproject.toml  pytest.ini  (+15 more)
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.venvs/docs/: pyproject.toml
_modules/: index.html  logging.html
api/: modules.html  nick_derobertis_site.api.html  nick_derobertis_site.api.routers.html  nick_derobertis_site.common.bk.html  nick_derobertis_site.common.cli.html  nick_derobertis_site.common.html  nick_derobertis_site.common.providers.html  nick_derobertis_site.common.services.html  nick_derobertis_site.courses_page.config.html  nick_derobertis_site.courses_page.course_pane.html  nick_derobertis_site.courses_page.courses_banner.html  nick_derobertis_site.courses_page.html  nick_derobertis_site.footer.html  nick_derobertis_site.gen_content.html  nick_derobertis_site.general.html  nick_derobertis_site.general.models.html  nick_derobertis_site.general.widgets.html  nick_derobertis_site.header.html  nick_derobertis_site.html  nick_derobertis_site.landing.components.awards_pane.award.html  nick_derobertis_site.landing.components.awards_pane.html  nick_derobertis_site.landing.components.card.html  nick_derobertis_site.landing.components.carousel.carousel_item.html  nick_derobertis_site.landing.components.carousel.html  nick_derobertis_site.landing.components.contact_pane.html  nick_derobertis_site.landing.components.html  nick_derobertis_site.landing.components.skills_pane.html  nick_derobertis_site.landing.components.skills_pane.skills_widget.html  nick_derobertis_site.landing.components.skills_pane.skills_widget.skills_widget_dropdown.html  nick_derobertis_site.landing.components.story_highlight_pane.html  nick_derobertis_site.landing.config.html  nick_derobertis_site.landing.html  nick_derobertis_site.landing.page.html  nick_derobertis_site.loading_page.html  nick_derobertis_site.research_page.config.html  nick_derobertis_site.research_page.html  nick_derobertis_site.research_page.research_banner.html  nick_derobertis_site.software_page.config.html  (+9 more)
e2e/: .env  .env.template  .envrc  conftest.py  custom_playwright.py  justfile  pyproject.toml  settings.py
e2e/test/home/: conftest.py  test_home.py
e2e/test/software/: conftest.py  test_software.py
(+827 files in other folders)
