[project]
name = "nick-derobertis-site"
version = "1.0.0"

[tool.poetry]
name = "nick-derobertis-site"
version = "1.3.1"
description = "Nick DeRobertis' Personal Website"
authors = ["Nick DeRobertis <whoopnip@gmail.com>"]
readme = "README.md"
packages = [{include = "nick_derobertis_site"}]
license = "MIT"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # List supported python versions
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = ["conf.py", "version.py"]

[tool.poetry.urls]
repository = "https://github.com/nickderobertis/nick-derobertis-site"
documentation = "https://nickderobertis.github.io/nick-derobertis-site"

[tool.poetry.dependencies]
python = ">=3.10"
panel = "*"
jupyterlab = "*"
awesome-panel-extensions = "*"
fire = "*"
derobertis-cv = "*"
pydantic = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic-to-typescript = "*"
sentry-sdk = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.setuptools]
packages = ["nick_derobertis_site"]

[tool.black]
include = 'nick_derobertis_site.*\.pyi?$|tests.*\.pyi?$'

[tool.isort]
profile = "black"
skip = ['.bzr', '.direnv', '.eggs', '.git', '.hg', '.mypy_cache', '.pants.d', '.svn', '.tox', '.venv', '__pypackages__', '_build', 'buck-out', 'build', 'dist', 'node_modules', '.venvs']