[tool.poetry]
name = "nick-derobertis-site-docs"
description = "Documentation building environment for nick-derobertis-site"
version = "1.0.0"
authors = ["Nick DeRobertis <whoopnip@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
nick-derobertis-site = {path = "../..", develop = true}
sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-fulltoc = "*"
sphinx-paramlinks = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
pypandoc = "*"
myst-parser = "*"
sphinx-material = "*"
matplotlib = "*"
jupyter = "*"